# Linux-IPC-OS3

./: CMakeLists.txt  main.cpp  messenger.cpp
headers/: MessageQueueProxy.cpp  MessageQueueProxy.h  Messenger.cpp  Messenger.h  NamesArray.cpp  NamesArray.h  names.cpp  names.h
